@@ -35,6 +35,8 @@ documents those changes that are of interest to users and admins.
     (user root).
  -- Cancel a job step when one of it's nodes goes DOWN.  Previously the step
     would continue if the job allocation was made with a --no-kill option. 
+ -- Fix to sched/backfill when job specifies no time limit and the partition
+    time limit is INFINITE.
 
 * Changes in SLURM 1.3.8
 ========================
